# Module.MetaData

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: autobuild.yml  build-linux.yml  build-windows.yml
CMake/: CastXmlConfig.cmake  Configure.cmake
CastXMLParser/: CMakeLists.txt
Extras/: GeneratedSchema.xsd
MetaData/: Argument.cpp  Argument.h  ArgumentList.cpp  ArgumentList.h  ArgumentType.cpp  ArgumentType.h  ArrayDeclarations.h  ArrayType.cpp  ArrayType.h  Base.cpp  Base.h  CMakeLists.txt  Class.cpp  Class.h  Constructor.cpp  Constructor.h  ContextType.cpp  ContextType.h  Converter.cpp  Converter.h  CvQualifiedType.cpp  CvQualifiedType.h  Declarations.h  Destructor.cpp  Destructor.h  ElaboratedType.cpp  ElaboratedType.h  Enumeration.cpp  Enumeration.h  Field.cpp  Field.h  File.cpp  File.h  Function.cpp  Function.h  FunctionType.cpp  FunctionType.h  FundamentalType.cpp  FundamentalType.h  Location.cpp  (+33 more)
Source/: CMakeLists.txt  Main.cpp
Test/: CMakeLists.txt  Class.xml  File1.xml  File2.xml  Integers.xml  Test1.cpp  Transformer.cmake
Test/Source/: CMakeLists.txt  Class.cpp  File1.cpp  File1.h  File2.cpp  Integers.cpp
Test/Transformer/: CMakeLists.txt  File1.xml
